--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jotai": "^2.8.3",
     "mysql2": "^3.10.1",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "prisma": "^5.16.0",
     "react": "^18",
     "react-dom": "^18"
