--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.93.2",
+    "cookie": "^0.6.0",
     "jotai": "^2.8.3",
     "mysql2": "^3.10.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "prisma": "^5.16.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
